--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,9 @@
 [tool.poetry]
 name = "hexlet-code"
 version = "0.1.0"
-description = ""
-authors = ["loki <mail@gunlinux.org>"]
+description = "https://github.com/gunlinux/python-project-lvl1"
+authors = ["loki <gunlinux@ya.ru>"]
+repository = "git@github.com:gunlinux/python-project-lvl1.git"
 packages = [
   { include = "brain_games" },
 ]
